Fix FF flexbox overflow issue

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -15,6 +15,7 @@ body {
   &.row { flex-direction: row; }
   &.stretched {
     flex: 1 auto;
+    min-height: 0px;
   }
 
   &.stretched-all {
